--- a/app/globals.css
+++ b/app/globals.css
@@ -12,12 +12,14 @@
   --spacing-lg: 2rem;
   --spacing-xl: 3rem;
   --max-width: 700px;
+  --code-bg: rgb(230, 230, 230);
 
   @media (prefers-color-scheme: dark) {
     --background: #1c1c1c;
     --foreground: #F7F7F7;
     --secondary: #999999;
     --link-blue: #007FFF;
+    --code-bg: rgb(37, 37, 37);
   }
 }
 
@@ -130,7 +132,7 @@ section {
   margin-bottom: 1em;
   border-radius: 0.375rem;
   overflow: hidden; 
-  background-color: rgba(0, 0, 0, 0.03);
+  background-color: var(--code-bg);
 }
 
 .prose figure[data-rehype-pretty-code-figure] > pre {
@@ -139,16 +141,19 @@ section {
   padding: 0.6rem 0.8rem; 
   line-height: 1.5; 
   font-family: inherit;
+  background-color: var(--code-bg);
 }
 
 .prose figure[data-rehype-pretty-code-figure] > pre code {
   display: grid;
+  background-color: var(--code-bg);
 }
 
 .prose figure[data-rehype-pretty-code-figure] > pre code span {
   font-size: 0.95em !important;
   line-height: 1.4 !important;
   color: var(--secondary) !important;
+  background-color: var(--code-bg);
 }
 
 .prose :where(code):not(:where(pre code)) {
@@ -156,7 +161,7 @@ section {
   margin: 0 0.1em;
   font-size: 0.9em;
   border-radius: 0.375rem;
-  background-color: rgba(0, 0, 0, 0.03);
+  background-color: var(--code-bg);
   color: var(--secondary);
   white-space: nowrap;
   font-family: inherit;
@@ -268,9 +273,6 @@ section {
 
 .prose ol ul li {
   list-style-type: square;
-}
-
-.prose ol {
 }
 
 .prose img {
