--- a/app/globals.css
+++ b/app/globals.css
@@ -157,7 +157,7 @@ section {
 }
 
 .prose :where(code):not(:where(pre code)) {
-  padding: 0.15em 0.4em;
+  padding: 0.025rem 0.3rem;
   margin: 0 0.1em;
   font-size: 0.9em;
   border-radius: 0.375rem;
